# bemodest.me

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  README.md  RULES_node.md  SIDE_CAR_ARCHITECTURE.md  docker-compose.prod.yaml  docker-compose.yaml  getall.json  package-lock.json  package.json  pnpm-lock.yaml  prd.md  test_bithumb_ws.py  turbo.json
.turbo/daemon/: ca756a7cbcfcc9a6-turbo.log.2026-01-13
apps/api/: .env.example  .gitignore  Dockerfile  package.json  test_alias_validation.js
apps/api/public/: alert.html  delta.html  hynix.html  index.html  premium.html  status.html  tracking.html
apps/api/src/: diagnose-redis.js  mongoDBClient.js  schemas.js  server.js  test-redis-types.js
apps/sidecar/: Cargo.toml  Dockerfile  build.rs  package-lock.json  package.json
apps/sidecar/src/: api.rs  auth.rs  chain_annotations.rs  comparison.rs  config.rs  errors.rs  main.rs  market_summary.rs  redis_sub.rs  websocket.rs
apps/sidecar/src/alert/: engine.rs  mod.rs  state.rs  types.rs  webhook.rs
apps/sidecar/src/cache/: eligibility.rs  forex.rs  history.rs  lvc.rs  market.rs  mod.rs  token_annotation.rs  token_cache.rs  visibility.rs
apps/sidecar/src/exchanges/: base.rs  batcher.rs  binance.rs  binance_f.rs  bitget.rs  bitget_f.rs  bithumb.rs  bybit.rs  bybit_f.rs  coinbase.rs  gateio.rs  geckoterminal.rs  generic.rs  hyperliquid_f.rs  kraken.rs  kucoin.rs  kyberswap.rs  mod.rs  okx.rs  okx_f.rs  upbit.rs
apps/sidecar/src/normalizer/: binance.rs  bitget.rs  bybit.rs  bybit_f.rs  coinbase.rs  funding.rs  gateio.rs  hyperliquid_f.rs  kraken.rs  kucoin.rs  mod.rs  okx.rs  okx_f.rs  upbit.rs
apps/sidecar/src/types/: exchange_ext.rs  generated.rs  mod.rs  ticker.rs
apps/web/: package.json
docs/references/: alert-delivery-flow.md
extension/: .gitignore  README.md  manifest.json  options.html  package-lock.json  package.json  settings.html
extension/blacklists/: README.md  uri.json
extension/css/: app.css
extension/js/: DomManipulator.js  background.js  chains.js  entity.js  labels.js  main.js
extension/js/app/: chooseBlockchain.js  historyInspector.js  rpcNodeSelector.js  signatureSelector.js  toggleBlacklistDomains.js  toggleBookmarks.js  toggleCompatibilityMode.js
extension/js/options/: chainlookup.js  consts.js  labels.js
extension/static/phishing/: phishing-notices.js  phishing-phishfort.html  phishing-segasec.html  phishing.html
oldBackend/: .gitignore  Dockerfile  docker-compose.yaml  package.json
oldBackend/public/: index.html  status.html
oldBackend/public/css/: status.css  styles.css
oldBackend/public/js/: main.js  status.js
oldBackend/src/: chains.js  entities.json  mongoDBClient.js  server.js  websocket.js
(+47 files in other folders)
