[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.28"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
