[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sidecar"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"


# Phase 0 dependencies
papaya = "0.1.7"
moka = { version = "0.12", features = ["future"] }
mongodb = { version = "3.2", features = ["rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
regress = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
primp = "1.3.1"
redis = { version = "0.27", features = ["tokio-comp", "aio", "streams"] }
thiserror = "2.0.18"

[build-dependencies]
schemars = "0.8"
serde_json = "1.0"
typify = "0.6.1"

